updated source code link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="social-list">
                 <li class="social-list__item"><i class="fa-brands fa-github fa-xl"></i>
-                    <a href="https://github.com" target="_blank" rel="noopener noreferrer" 
+                    <a href="https://github.com/lpurski/dog-years-site" target="_blank" rel="noopener noreferrer" 
                     class="social-list__link" >Source Code</a></li>
             </ul>
         </nav>
